--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     
         <div class="video-container">
           <video controls width="1280" height="576">
-              <source src="promotional_video.mp4" type="video/mp4">
+              <source src="./promotional_video.mp4" type="video/mp4">
               Your browser does not support the video tag.
           </video>
       </div>
