--- a/about.html
+++ b/about.html
@@ -43,19 +43,19 @@
         <div class="branches">
           <div class="branch">
             <div class="circle">
-                <img src="branch4.jpg" alt="Isla Virginia">
+                <img src="./branch4.jpg" alt="Isla Virginia">
             </div>
             <p>Isla Virginia</p>
         </div>
         <div class="branch">
             <div class="circle">
-                <img src="branch6.jpg" alt="Isla Virginia 2">
+                <img src="./branch6.jpg" alt="Isla Virginia 2">
             </div>
             <p>Isla Virginia 2</p>
         </div>
         <div class="branch">
             <div class="circle">
-                <img src="branch5.jpg" alt="Isla Virginia 3">
+                <img src="./branch5.jpg" alt="Isla Virginia 3">
             </div>
             <p>Isla Virginia 3</p>
         </div>
@@ -81,7 +81,7 @@
 
         <div class="container1">
             <div class="image">
-                <img src="image1.jpg" alt="Profile Image">
+                <img src="./image1.jpg" alt="Profile Image">
             </div>
             
             <h2>Who we are?</h2>
@@ -92,7 +92,7 @@
                    all to help you better manage your frontline staff.</p>
             </div>
             <div class="image">
-                <img src="image2.jpg" alt="Profile Image">
+                <img src="./image2.jpg" alt="Profile Image">
             </div>
             <h2>What we do?</h2>
             <div class="box2">
