--- a/contact.html
+++ b/contact.html
@@ -52,13 +52,13 @@
               <h3>Follow Us</h3>
               <div class="icons">
                 <a href="https://www.facebook.com/TheFUNtalan" class="social-icon" target="_blank">
-                    <img src="image5_facebook.png" alt="Facebook">
+                    <img src="./image5_facebook.png" alt="Facebook">
                 </a>
                 <a href="https://www.youtube.com/channel/UCzs3dWqMnRJ4-rfp6Y2IUQw" class="social-icon" target="_blank">
-                    <img src="image4_youtube.png" alt="Youtube">
+                    <img src="./image4_youtube.png" alt="Youtube">
                 </a>
                 <a href="https://mail.google.com/mail/?view=cm&fs=1&to=islavirginia193@gmail.com&su=Hello&body=How%20are%20you?" target="_blank" class="social-icon">
-                    <img src="image3_gmail.png" alt="Gmail">
+                    <img src="./image3_gmail.png" alt="Gmail">
                 </a>
               </div>
             </div>
