--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="left-section">
-            <img src="logo.png" alt="Isla Virginia Logo" class="logo">
+            <img src="./logo.png" alt="Isla Virginia Logo" class="logo">
         </div>        
         <div class="right-section">
             <h2>Login</h2>
