--- a/login.html
+++ b/login.html
@@ -11,20 +11,20 @@
 <body>
     <div class="container">
         <div class="left-section">
-            <img src="./logo.png" alt="Isla Virginia Logo" class="logo">
+            <img src="logo.png" alt="Isla Virginia Logo" class="logo">
         </div>        
         <div class="right-section">
             <h2>Login</h2>
             
-            <form action="#" method="POST">
+            <form id="loginForm">
                 <div class="input-group">
                     <span class="icon"><i class="fas fa-envelope"></i></span>
-                    <input type="email" placeholder="Email" name="email" required>
+                    <input type="email" placeholder="Email" name="email" id="email" required>
                 </div>
 
                 <div class="input-group">
                     <span class="icon"><i class="fas fa-lock"></i></span>
-                    <input type="password" placeholder="Password" name="password" required>
+                    <input type="password" placeholder="Password" name="password" id="password" required>
                 </div>
 
                 <div class="btn-container">
@@ -34,5 +34,25 @@
             </form>
         </div>
     </div>
+
+    <script>
+        document.getElementById("loginForm").addEventListener("submit", function (event) {
+            event.preventDefault(); // Prevent form from submitting
+
+            const email = document.getElementById("email").value;
+            const password = document.getElementById("password").value;
+
+            // Hardcoded credentials for demonstration
+            const validEmail = "tahanjerome27@gmail.com";
+            const validPassword = "Jerome104478";
+
+            if (email === validEmail && password === validPassword) {
+                alert("Login successful! Redirecting to the home page...");
+                window.location.href = "home.html"; // Replace with your actual home page URL
+            } else {
+                alert("Invalid email or password. Please try again.");
+            }
+        });
+    </script>
 </body>
 </html>
