--- a/notification.html
+++ b/notification.html
@@ -15,7 +15,7 @@
       <h2>ISLA VIRGINIA <i class="fas fa-times close-sidebar"></i></h2>
       
       <ul>
-        <li><a href="dashboard_admin.html">Home</a></li>
+        <li><a href="home.html">Home</a></li>
         <li><a href="postjob_admin.html">Post a Job</a></li>
         <li><a href="view_jobpost.html">View Job Post</a></li>
         <li><a href="application_progress.html">Application Progress</a></li>
