--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <li><a href="about.html">About us</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="faq.html">FAQ</a></li>
-        <li><a href="login.html">Log out</a></li>
+        <li><a href="index.html">Log out</a></li>
       </ul>
     </div>
 
